# hypermap-explorer

./: metadata.json
api/: hypermap-explorer:nick.hypr-v0.wit
explorer/: Cargo.toml
explorer/src/: lib.rs
pkg/: manifest.json
pkg/ui/: index.html
ui/: index.html  vite.config.ts
ui/src/: App.tsx  abis.ts  helpers.ts  index.css
ui/src/components/: DataKeyElement.tsx  InfoContainer.tsx  NodeElement.tsx
